2010-04-10  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        SheriffBot should spam when it encounters errors
        https://bugs.webkit.org/show_bug.cgi?id=37329

        We need to always update the status server so we don't get stuck in a
        spam loop.  I tried writing a test for this change, but it kind of
        got out of control.  We need a better way to do failure injection.

        * Scripts/webkitpy/tool/commands/sheriffbot.py:

2010-04-10  Adam Barth  <abarth@webkit.org>

        Unreviewed attempt to fix the Chromium Mac canary.

        * Scripts/webkitpy/common/config/ports.py:
        * Scripts/webkitpy/common/config/ports_unittest.py:
        * Scripts/webkitpy/common/system/executive.py:

2010-04-10  Adam Barth  <abarth@webkit.org>

        Unreviewed.

        Add the Apache bits to win.py for new-run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=37397

        I still have run this yet, but I looked around to figure out what the
        various paths appear to be.  I'll figure out a way to remove the
        copy/paste code in a future patch.

        * Scripts/webkitpy/layout_tests/port/mac.py:
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/port/win.py:

2010-04-10  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Sketch out the win port for new-run-webkit-tests
        https://bugs.webkit.org/show_bug.cgi?id=37393

        I haven't tried running this yet, but we've got to start somewhere.

        * Scripts/webkitpy/layout_tests/port/factory.py:
        * Scripts/webkitpy/layout_tests/port/mac.py:
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/port/win.py: Added.

2010-04-10  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        webkit-patch land should not build and test by default
        https://bugs.webkit.org/show_bug.cgi?id=33631
