@@ -2,6 +2,15 @@
 
         Reviewed by Eric Seidel.
 
+        Move global queue log to the logs directory so it survives git clean -f
+        https://bugs.webkit.org/show_bug.cgi?id=37395
+
+        * Scripts/webkitpy/tool/commands/queues.py:
+
+2010-04-10  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         SheriffBot should spam when it encounters errors
         https://bugs.webkit.org/show_bug.cgi?id=37329
 
